--- a/pages/18634.html
+++ b/pages/18634.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f582f564d11971235376e6e3e79b07722d3c7e8a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+    <h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_30d5f9f2aac9c0be9fe2cf6b3ff96ceb6c3c134e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -326,23 +326,28 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/differential+renormalization'>differential renormalization</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on December 27, 2017 07:32:28 
+  Revised on February  5, 2018 13:18:09 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jose+Gracia-Bondia" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jose+Gracia-Bondia/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Jose+Gracia-Bondia" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jose+Gracia-Bondia" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Jose+Gracia-Bondia" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jose+Gracia-Bondia/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Jose+Gracia-Bondia" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jose+Gracia-Bondia" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
