--- a/pages/18602.html
+++ b/pages/18602.html
@@ -335,15 +335,25 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+field+histories'>space of field histories</a></p>
+</li>
 </ul>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange</a> <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -352,10 +362,22 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/advanced+and+retarded+causal+propagators'>advanced and retarded propagator</a>,</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+</li>
+</ul>
 </li>
 </ul>
 
@@ -363,11 +385,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a> <a class='existingWikiWord' href='/nlab/show/geometric+quantization+of+symplectic+groupoids'>of symplectic groupoids</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a>, <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a></p>
 </li>
 </ul>
 
@@ -383,7 +405,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observables</a></p>
 </li>
 
 <li>
@@ -453,6 +475,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Wightman propagator</a></p>
+</li>
 </ul>
 </li>
 </ul>
@@ -517,7 +543,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a></p>
 </li>
 </ul>
 
@@ -559,46 +585,16 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization condition</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a>, <a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M%C3%B8ller+operator'>quantum Møller operator</a></p>
+</li>
 </ul>
 </li>
 
@@ -612,6 +608,68 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>(&quot;re-&quot;)normalization scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+condition'>(&quot;re&quot;-)normalization condition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>/<a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>relative effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Wilsonian RG</a>, <a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Polchinski flow equation</a></p>
 </li>
 </ul>
 </li>
@@ -1330,7 +1388,7 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>.</p>
 
-<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_654414b68d18905023341b558217732fddd32208_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_b3223f6a92e92402151b7c2d12685cbfb9b5e0ac_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
 
 <h2 id='references'>References</h2>
 
@@ -1344,6 +1402,12 @@ margin-left: 0em;
 
 <ul>
 <li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
+</ul>
+
+<p>Discussion in <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>:</p>
+
+<ul>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_b3223f6a92e92402151b7c2d12685cbfb9b5e0ac_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1368,14 +1432,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 24, 2018 15:01:06 
+  Revised on February  6, 2018 07:49:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
