--- a/pages/8202.html
+++ b/pages/8202.html
@@ -312,18 +312,36 @@ margin-left: 0em;
 <li><a href='http://personnel.physics.ucla.edu/directory/faculty/bern'>webpage</a></li>
 </ul>
 
+<h2 id='wrtitings'>Wrtitings</h2>
+
+<ul>
+<li><em>Do I have to draw you a diagram? A tale of quantum gravity</em>, KITP Public Lecture 2016 (<a href='http://online.kitp.ucsb.edu/plecture/zbern16/pdf/Zbern16_PublicLecture_KITP.pdf'>pdf</a>)</li>
+</ul>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_9477fe2514f818cb99cb2f24464edade81080c9d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/KLT+relations'>KLT relations</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/string+theory+results+applied+elsewhere'>string theory results applied elsewhere</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on August 24, 2012 03:13:25 
+  Revised on February  6, 2018 08:07:36 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.197)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Zvi+Bern" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Zvi+Bern" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Zvi+Bern/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Zvi+Bern" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Zvi+Bern" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
