--- a/pages/18602.html
+++ b/pages/18602.html
@@ -1383,12 +1383,18 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#quantum_gravity_correction'>Quantum gravity correction</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, the <a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic moment</a> of <a class='existingWikiWord' href='/nlab/show/particle'>particles</a> as predicted by <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> may receive corrections due to <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum effects</a>. Such corrections are also called <em><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomalies</a></em>, and hence one speaks of the <em>anomalous magnetic moments</em>.</p>
 
-<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_b3223f6a92e92402151b7c2d12685cbfb9b5e0ac_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+<p>The archetypical example is the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, which is famous as the <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>pQFT</a>-prediction that matches <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> to an accuracy of about <math class='maruku-mathml' display='inline' id='mathml_f2ac09945f1d82ada37e78e898801501b6428487_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>12</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>10^{-12}</annotation></semantics></math> (e.g.<a href='#Scharf95'>Scharf 95, (3.10.20)</a>).</p>
+
+<h2 id='quantum_gravity_correction'>Quantum gravity correction</h2>
+
+<p>The further corrections of <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>perturbative quantum gravity</a> to the anomalous magnetic moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> and the <a class='existingWikiWord' href='/nlab/show/muon'>muon</a> have been computed in (<a href='#BerendsGastman75'>Berends-Gastman 75</a>) and found to be finite without need for <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a>:</p>
+
+<p><img src='https://www.physicsforums.com/attachments/gravityvertexcorrectionsforqed-png.219804/'/></p>
 
 <h2 id='references'>References</h2>
 
@@ -1404,10 +1410,16 @@ margin-left: 0em;
 <li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
 </ul>
 
+<p>Corrections at <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> from <a class='existingWikiWord' href='/nlab/show/quantum+gravity'>quantum gravity</a> are discussed in</p>
+
+<ul>
+<li id='BerendsGastman75'>F. A. Berends, R. Gastmans, <em>Quantum gravity and the electron and muon anomalous magnetic moment</em>, Phys. Lett. B55 Issue 3 Feb 1975 311-312 (<a href='https://doi.org/10.1016/0370-2693(75'>doi:10.1016/0370-2693(75)90608-5</a>90608-5))</li>
+</ul>
+
 <p>Discussion in <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a>:</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_b3223f6a92e92402151b7c2d12685cbfb9b5e0ac_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_f2ac09945f1d82ada37e78e898801501b6428487_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1432,14 +1444,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February  6, 2018 07:49:03 
+  Revised on February  6, 2018 09:58:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anomalous+magnetic+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anomalous+magnetic+moment/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/anomalous+magnetic+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anomalous+magnetic+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
