--- a/pages/18853.html
+++ b/pages/18853.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -919,15 +919,25 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+field+histories'>space of field histories</a></p>
+</li>
 </ul>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange</a> <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -936,10 +946,22 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/advanced+and+retarded+causal+propagators'>advanced and retarded propagator</a>,</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+</li>
+</ul>
 </li>
 </ul>
 
@@ -947,11 +969,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a> <a class='existingWikiWord' href='/nlab/show/geometric+quantization+of+symplectic+groupoids'>of symplectic groupoids</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a>, <a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a></p>
 </li>
 </ul>
 
@@ -967,7 +989,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observables</a></p>
 </li>
 
 <li>
@@ -1037,6 +1059,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Wightman propagator</a></p>
+</li>
 </ul>
 </li>
 </ul>
@@ -1101,7 +1127,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a></p>
 </li>
 </ul>
 
@@ -1143,38 +1169,16 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M%C3%B8ller+operator'>quantum Møller operator</a></p>
+</li>
 </ul>
 </li>
 
@@ -1188,6 +1192,68 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>(&quot;re-&quot;)normalization scheme</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+condition'>(&quot;re&quot;-)normalization condition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction+vertex+redefinition'>interaction vertex redefinition</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a>/<a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>running coupling constants</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>effective quantum field theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+quantum+field+theory'>UV cutoff</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/counterterm'>counterterms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>relative effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Wilsonian RG</a>, <a class='existingWikiWord' href='/nlab/show/Polchinski%27s+flow+equation'>Polchinski flow equation</a></p>
 </li>
 </ul>
 </li>
@@ -1328,7 +1394,7 @@ margin-left: 0em;
 
 <p>The Lamb shift may be attributed to <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>-contributions giving “<a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a>” to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon vertex</a> that describes the basic <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, via the <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon vertex</a>, hence called <em>vertex corrections</em> and governed by the <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> of <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>, the <em><a class='existingWikiWord' href='/nlab/show/fine+structure+constant'>fine structure constant</a></em>.</p>
 
-<p><img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='500'/></p>
+<p id='VertexCorrectionDiagrams'> <img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='500'/></p>
 
 <p>(Here the dot on the right is the external vertex for the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>.)</p>
 
@@ -1393,14 +1459,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 20, 2018 15:41:21 
+  Revised on February  6, 2018 09:47:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (195.229.110.1)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
